--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,6 +13,7 @@
 {{ template "_internal/google_news.html" . }}
 {{ template "_internal/schema.html" . }}
 
+<link rel="icon" href="{{ .Site.Params.Favicon }}" type="image/x-icon">
 <link rel="stylesheet" href="css/layout.css" />
 <style type="text/css">
 {{ partial "theme-colors.css" . | safeCSS }}
